# Flask-CMS

./: app.py  pyproject.toml  readme.md
instance/: database.db
templates/: index.html
website/: __init__.py  auth.py  views.py
website/static/: index.js
website/templates/: base.html  index.html  login.html  signup.html
