[tool.poetry]
name = "flaskcms"
version = "0.1.0"
description = "Simple CMS w user and posts"
authors = ["splmloic <l2ct@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
